<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment"
    android:backgroundTint="@color/background_color"
    android:background="@color/background_color">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/yellow"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="WeathoMeter"
        app:titleTextColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tv_save_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/yellow_round_background"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:padding="2dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/save_city"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/tv_today_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/today"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_home" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_today_placeholder" />


    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:maxLines="1"
        android:text="26°C"
        android:textColor="@color/black"
        android:textSize="52sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="20dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:maxLines="1"
        android:hint="Barrie"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/ic_edit"
        app:drawableTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_temperature" />

    <ImageView
        android:id="@+id/iv_weather"
        android:layout_width="44dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_weather"
        app:layout_constraintTop_toBottomOf="@id/tv_city"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tv_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:gravity="center_vertical"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_city"

        />
<!--    android:drawableStart="@drawable/ic_weather"-->
<!--    android:drawablePadding="5dp"-->

    <androidx.constraintlayout.widget.Group
        android:visibility="invisible"
        android:id="@+id/pl_grps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_humidity_placeholder,tv_min_temp_placeholder,tv_max_temp_placeholder,tv_pressure_placeholder"/>

    <TextView
        android:id="@+id/tv_humidity_placeholder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/humidity"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_humidity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_weather"
        app:drawableStartCompat="@drawable/ic_humidity"
        app:drawableTint="@color/black"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:paddingStart="4dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_humidity_placeholder"
        app:layout_constraintTop_toBottomOf="@id/tv_weather"
        app:layout_constraintBottom_toTopOf="@id/tv_min_temp"
        />

    <TextView
        android:id="@+id/tv_min_temp_placeholder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/min_temp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_min_temp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_humidity_placeholder"
        app:drawableStartCompat="@drawable/ic_temp"
        app:drawableTint="@color/blue"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />

    <TextView
        android:id="@+id/tv_min_temp"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:paddingStart="4dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="4dp"
        android:gravity="center_vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_min_temp_placeholder"
        app:layout_constraintTop_toBottomOf="@id/tv_humidity" />

    <TextView
        android:id="@+id/tv_max_temp_placeholder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/max_temp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_max_temp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_min_temp_placeholder"
        app:drawableStartCompat="@drawable/ic_temp"
        app:drawableTint="@color/red"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />

    <TextView
        android:id="@+id/tv_max_temp"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:paddingStart="4dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center_vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_max_temp_placeholder"
        app:layout_constraintTop_toBottomOf="@id/tv_min_temp" />

    <TextView
        android:id="@+id/tv_pressure_placeholder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pressure"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_pressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_max_temp_placeholder"
        app:drawableStartCompat="@drawable/ic_pressure"
        app:drawableTint="@color/black"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />

    <TextView
        android:id="@+id/tv_pressure"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:paddingStart="4dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center_vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_pressure_placeholder"
        app:layout_constraintTop_toBottomOf="@id/tv_max_temp"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>